_sass/termina-plex/pages/single.scss
@charset "utf-8";

// Pages: Single
.postWrapper {
  text-align: left;
  padding: $spacingUnit * 0.6667;
}

.postMetadata {
  font-family: $code-font-family;
  display: block;
  background: var(--header-background-color);
  padding: $spacingUnit * 0.6667;
}

dt,
dd {
  line-height: 1.5;
}

dl {
  display: grid;
  grid-template-columns: max-content auto;
}

dt {
  grid-column-start: 1;
}

dd {
  grid-column-start: 2;
}

dt::after {
  content: ":";
}

.highlight {
  margin: 0;
}

.highlight pre {
  background-color: var(--header-background-color);
  margin: 0;
  padding: $spacingUnit * 0.6667;
}

.pageNavFooter {
  border-top: 1px solid rgba(127, 127, 127, 0.5);
  text-align: left;
  margin-top: $spacingUnit * 1.5;
  padding: $spacingUnit * 0.6667;
}

.pagePrevious, .pageNext {
  width: 35%;
  margin-bottom: $spacingUnit;
}

.pagePrevious {
  float: left;
}

.pagePrevious a::before {
  content: "\2190\00a0"
}

.pageNext {
  float: right;
  text-align: right;
}

.pageNext a::after {
  content: "\00a0\2192"
}

